; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/extr_storvsc_drv.c_cache_wwn.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/extr_storvsc_drv.c_cache_wwn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.storvsc_device = type { i8*, i8* }
%struct.vstor_packet = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i32, i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.storvsc_device*, %struct.vstor_packet*)* @cache_wwn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cache_wwn(%struct.storvsc_device* %0, %struct.vstor_packet* %1) #0 {
  %3 = alloca %struct.storvsc_device*, align 8
  %4 = alloca %struct.vstor_packet*, align 8
  store %struct.storvsc_device* %0, %struct.storvsc_device** %3, align 8
  store %struct.vstor_packet* %1, %struct.vstor_packet** %4, align 8
  %5 = load %struct.vstor_packet*, %struct.vstor_packet** %4, align 8
  %6 = getelementptr inbounds %struct.vstor_packet, %struct.vstor_packet* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 4
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %25

10:                                               ; preds = %2
  %11 = load %struct.vstor_packet*, %struct.vstor_packet** %4, align 8
  %12 = getelementptr inbounds %struct.vstor_packet, %struct.vstor_packet* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 3
  %14 = load i32, i32* %13, align 4
  %15 = call i8* @wwn_to_u64(i32 %14)
  %16 = load %struct.storvsc_device*, %struct.storvsc_device** %3, align 8
  %17 = getelementptr inbounds %struct.storvsc_device, %struct.storvsc_device* %16, i32 0, i32 1
  store i8* %15, i8** %17, align 8
  %18 = load %struct.vstor_packet*, %struct.vstor_packet** %4, align 8
  %19 = getelementptr inbounds %struct.vstor_packet, %struct.vstor_packet* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 2
  %21 = load i32, i32* %20, align 8
  %22 = call i8* @wwn_to_u64(i32 %21)
  %23 = load %struct.storvsc_device*, %struct.storvsc_device** %3, align 8
  %24 = getelementptr inbounds %struct.storvsc_device, %struct.storvsc_device* %23, i32 0, i32 0
  store i8* %22, i8** %24, align 8
  br label %40

25:                                               ; preds = %2
  %26 = load %struct.vstor_packet*, %struct.vstor_packet** %4, align 8
  %27 = getelementptr inbounds %struct.vstor_packet, %struct.vstor_packet* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = call i8* @wwn_to_u64(i32 %29)
  %31 = load %struct.storvsc_device*, %struct.storvsc_device** %3, align 8
  %32 = getelementptr inbounds %struct.storvsc_device, %struct.storvsc_device* %31, i32 0, i32 1
  store i8* %30, i8** %32, align 8
  %33 = load %struct.vstor_packet*, %struct.vstor_packet** %4, align 8
  %34 = getelementptr inbounds %struct.vstor_packet, %struct.vstor_packet* %33, i32 0, i32 0
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 8
  %37 = call i8* @wwn_to_u64(i32 %36)
  %38 = load %struct.storvsc_device*, %struct.storvsc_device** %3, align 8
  %39 = getelementptr inbounds %struct.storvsc_device, %struct.storvsc_device* %38, i32 0, i32 0
  store i8* %37, i8** %39, align 8
  br label %40

40:                                               ; preds = %25, %10
  ret void
}

declare dso_local i8* @wwn_to_u64(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
